created modal component

--- a/hackathon/src/app/game/game.component.html
+++ b/hackathon/src/app/game/game.component.html
@@ -1,3 +1,7 @@
-<p>
-  game works!
-</p>
+<app-modal [content]="quarterContent"></app-modal>
+
+
+<ng-template #quarterContent>
+  <h3>Do you want to spend your money on Gum?</h3>
+</ng-template>
+
