--- a/hackathon/src/app/game/game.component.html
+++ b/hackathon/src/app/game/game.component.html
@@ -1,3 +1,14 @@
+<div class="Thirds">
+jj
+</div>
+
+  <div id="myBar" class="progressBar"></div>
+
+<div class="Thirds">
+  ll
+</div>
+  <p class="floor">-----------------------------------------</p>
+<button id="Earn" (click)="earn()" class="floor">Earn!</button>
 <app-modal [content]="quarterContent"></app-modal>
 
 
