--- a/hackathon/src/app/game/game.component.css
+++ b/hackathon/src/app/game/game.component.css
@@ -4,19 +4,19 @@
     /* opacity: 0; */
     z-index: 9;
     /* margin: 0; */
-    padding: 0;
-    min-height: 100%;
+    /* padding: 0; */
+    /* min-height: 100%; */
     background: rgba(0,0,0,.6);
-    padding: 25px;
+    /* padding: 25px; */
     font-family:verdana;
-    margin: auto;
-    width: 100%;
+    /* margin: auto; */
+    /* width: 100%; */
     position: fixed;
 }
 
-.modal {
+/* .modal {
     font-family:verdana;
-    /* opacity: 0; */
+    opacity: 0;
     margin: auto;
     width: 100%;
     min-height: 100vh;
@@ -24,16 +24,18 @@
     background-color: gray;
     text-align: center;
     z-index: 5;
-}
+} */
 
 .content {
     background: #fefefe;
     border: gray solid 1px;
     border-radius: 5px;
     width: 500px;
+    /* margin-top:50%;
+    margin-left: 50%; */
     margin: auto;
     text-align: left;
-    margin-top: 35%;
+    /* margin-top: 30%; */
     padding: 20px;
 }
 
