create progress bar

--- a/frontend/src/app/game/game.component.html
+++ b/frontend/src/app/game/game.component.html
@@ -15,6 +15,11 @@
   </div>
 </div>
 
+<div class="progressBar" id="progressBar">
+</div>
+
+<button (click)="expandBar()">Expand Bar</button>
+
 
 
 
