--- a/frontend/src/app/game/game.component.html
+++ b/frontend/src/app/game/game.component.html
@@ -15,8 +15,12 @@
   </div>
 </div>
 
-<div class="progressBar" id="progressBar">
-</div>
+<!-- <div class="progressBar"> -->
+  <div class="stay" id="progressBar">
+      {{height}}
+  </div>
+  
+<!-- </div> -->
 
 <button (click)="expandBar()">Expand Bar</button>
 
