--- a/frontend/src/app/game/game.component.html
+++ b/frontend/src/app/game/game.component.html
@@ -1,37 +1,42 @@
-<button (click)="openModal()">Open Modal</button>
-
-<img *ngIf="!unlocked" alt="" src="../../assets/images/happy-meal-sil.png" id="happy-meal" style="height: 120px;">
-<img *ngIf="unlocked" alt="" src="../../assets/images/happy-meal.png" id="happy-meal" style="height: 120px;">
-
-
-<div class="container" id="modal">
-  <div class="content">
-    <h3 style="margin-top: 0;">Do you want to spend your money on Gum?</h3>
-    <p>You can spend your money now or keep playing.</p>
-    <div class="buttonContainer">
-      <button (click)="keepPlaying()" style="background-color: #4A90E2; color: white; border: #4A90E2;">Keep Playing</button>
-      <button (click)="spendMoney()">Spend Money</button>
+<div style="display: flex; flex-direction:row; position: relative;">
+  <div>
+    <div>
+        <img *ngIf="!concertUnlocked" alt="" src="../../assets/images/concert-ticket-sil.png" id="concert-ticket" style="height: 80px;">
+        <img *ngIf="concertUnlocked" alt="" src="../../assets/images/concert-ticket.png" id="concert-ticket" style="height: 80px;">
+    </div>
+    <div>
+        <img *ngIf="!dotUnlocked" alt="" src="../../assets/images/dot-sil.png" id="dot" style="height: 80px;">
+        <img *ngIf="dotUnlocked" alt="" src="../../assets/images/dot.png" id="dot" style="height: 80px;">
+    </div>
+    <div>
+        <img *ngIf="!movieUnlocked" alt="" src="../../assets/images/movie-ticket-sil.png" id="movie-ticket" style="height: 80px;">
+        <img *ngIf="movieUnlocked" alt="" src="../../assets/images/movie-ticket.png" id="movie-ticket" style="height: 80px;">
+    </div>
+    <div>
+        <img *ngIf="!cubeUnlocked" alt="" src="../../assets/images/rubiks-cube-sil.png" id="rubiks-cube" style="height: 80px;">
+        <img *ngIf="cubeUnlocked" alt="" src="../../assets/images/rubiks-cube.png" id="rubiks-cube" style="height: 80px;">
+    </div>
+    <div>
+        <img *ngIf="!happyMealUnlocked" alt="" src="../../assets/images/happy-meal-sil.png" id="happy-meal" style="height: 80px;">
+        <img *ngIf="happyMealUnlocked" alt="" src="../../assets/images/happy-meal.png" id="happy-meal" style="height: 80px;">
+    </div>
+    <div>
+        <img *ngIf="!musicUnlocked" alt="" src="../../assets/images/music-download-sil.png" id="music-download" style="height: 80px;">
+        <img *ngIf="musicUnlocked" alt="" src="../../assets/images/music-download.png" id="music-download" style="height: 80px;">
+    </div>
+    <div>
+        <img *ngIf="!gumUnlocked" alt="" src="../../assets/images/bubble-gum-sil.png" id="gum" style="height: 80px;">
+        <img *ngIf="gumUnlocked" alt="" src="../../assets/images/bubble-gum.png" id="gum" style="height: 80px;">
+    </div>
+  </div>
+  
+  <div>
+    <div class="stay" id="progressBar">
+        {{height}}
     </div>
   </div>
 </div>
 
-<!-- <div class="progressBar"> -->
-  <div class="stay" id="progressBar">
-      {{height}}
-  </div>
-  
-<!-- </div> -->
-
-<button (click)="expandBar()">Expand Bar</button>
-
-
-
-
-
-
-<!-- <div>
-  <app-modal id="quarter" [content]="quarterContent"></app-modal>
+<div style="margin-top: 20px; text-align: center;">
+  <button class="earnBtn" (click)="expandBar()">Tap to Earn!</button>
 </div>
-<ng-template #quarterContent>
-  <h3>Do you want to spend your money on Gum?</h3>
-</ng-template> -->
