--- a/frontend/src/app/game/game.component.css
+++ b/frontend/src/app/game/game.component.css
@@ -23,7 +23,7 @@
   display: none;
   top: 0; left: 0; right: 0; bottom: 0;
   /* opacity: 0; */
-  z-index: 9;
+  z-index: 90;
   /* margin: 0; */
   /* padding: 0; */
   /* min-height: 100%; */
@@ -89,9 +89,10 @@ button {
 }
 
 .stay {
+  width: 90px;
   position: absolute;
   bottom: 0;
-  height:100px;
+  height:20px;
   background-color: palegreen;
   /* overflow: auto; */
 }
