update game component

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -2,4 +2,4 @@
 
 <h1>What is your time worth?</h1>
 
-<button (click)="playGame()">Press to Begin</button>
+<button (click)="playGame()">Begin</button>
