--- a/frontend/src/app/game/game.component.css
+++ b/frontend/src/app/game/game.component.css
@@ -1,3 +1,7 @@
+* {
+  font-family:verdana;
+}
+
 /* .progressBar{ */
   /*background-color: black;*/
   /* border: 1px solid black;
@@ -66,6 +70,7 @@
 }
 
 button {
+  cursor: pointer;
   padding: 10px;
   border-radius: 15px;
   font-size: 15px;
@@ -93,6 +98,9 @@ button {
   position: absolute;
   bottom: 0;
   height:20px;
-  background-color: palegreen;
+  background-color: #72AE2D;
+  color: white;
+  border-radius: 10px;
+  text-align: center;
   /* overflow: auto; */
 }
