update item labels to be hidden

--- a/frontend/src/app/game/game.component.css
+++ b/frontend/src/app/game/game.component.css
@@ -104,3 +104,9 @@ button {
   text-align: center;
   /* overflow: auto; */
 }
+
+.itemDescript {
+  margin-bottom: 70px;
+  /* display: none; */
+  visibility: hidden;
+}
