--- a/frontend/src/app/game/game.component.html
+++ b/frontend/src/app/game/game.component.html
@@ -36,14 +36,16 @@
     </div>
   </div>
 
-  <div style="flex-direction: column">
-    <p style="margin-bottom:70px;">Concert Ticket - $50.00</p>
-    <p style="margin-bottom:70px;">Dot - $25.00</p>
-    <p style="margin-bottom:70px;">Movie Ticket - $13.00</p>
-    <p style="margin-bottom:70px;">Rubik's Cube - $5.00</p>
-    <p style="margin-bottom:70px;">Happy Meal - $3.00</p>
-    <p style="margin-bottom:70px;">Music Download - $0.99</p>
-    <p style="margin-bottom:70px;">Gum - $0.25</p>
+  <div style="flex-direction: column;">
+    <!-- <div style="display: flex; flex-direction:column"> -->
+      <p class="itemDescript" id="concert">Concert Ticket - $50.00</p>
+      <p class="itemDescript" id="dot">Dot - $25.00</p>
+      <p class="itemDescript" id="movie">Movie Ticket - $13.00</p>
+      <p class="itemDescript" id="cube">Rubik's Cube - $5.00</p>
+      <p class="itemDescript" id="happyMeal">Happy Meal - $3.00</p>
+      <p class="itemDescript" id="music">Music Download - $0.99</p>
+      <p class="itemDescript" id="bubbleGum">Gum - $0.25</p>
+    <!-- </div> -->
   </div>
 </div>
 
