--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -2,4 +2,26 @@
 
 <h1>What is your time worth?</h1>
 
-<button (click)="playGame()">Begin</button>
+<h3>The rate of {{stateCode}} is {{rate}}!</h3>
+<us-map (onMapClick)="onMapClick($event)"></us-map>
+
+<div class="container" id="startModal">
+    <div class="content">
+        <h3 style="margin-top: 0;">You chose {{stateCode}} at rate {{rate}}!</h3>
+        <p>Instructions:</p>
+        <p>
+            Tap either of the buttons on the bottom of the screen to earn money. 
+            Once you have earned enough to purchase an item, you'll be asked if you 
+            would like to spend all your money, or keep saving for something better.
+            You just have to ask yourself if it's worth the work and wait. 
+        </p>
+        <div class="buttonContainer">
+            <button (click)="closeModal()">Back</button>
+            <button (click)="playGame()" style="background-color: #4A90E2; color: white; border: #4A90E2;">Play!</button>
+        </div>
+    </div>
+</div>
+
+<!-- <button (click)="playGame()">Begin</button>
+
+<app-map></app-map> -->
