--- a/frontend/src/app/game/game.component.html
+++ b/frontend/src/app/game/game.component.html
@@ -1,4 +1,6 @@
-<div style="display: flex; flex-direction:row; position: relative; justify-content: space-evenly;">
+<div id="allOfTheEverything">
+
+<div style="display: flex; flex-direction:row; position: relative; justify-content: space-evenly;" id="bigBox">
   <div style="flex-direction: column">
     <div>
         <img *ngIf="!concertUnlocked" alt="" src="../../assets/images/concert-ticket-sil.png" id="concert-ticket" style="height: 80px;">
@@ -29,7 +31,7 @@
         <img *ngIf="gumUnlocked" alt="" src="../../assets/images/bubble-gum.png" id="gum" style="height: 80px;">
     </div>
   </div>
-  
+
   <div style="flex-direction: column">
     <div class="stay" id="progressBar">
         {{moneyEarned | number : '1.2-2'}}
@@ -48,7 +50,8 @@
 </div>
 
 <div style="margin-top: 20px; text-align: center;">
-  <button class="earnBtn" (click)="expandBar()">Tap to Earn!</button>
+  <button class="earnBtn earn" (click)="expandBar()" id="Lt2earn">Tap to Earn!</button>
+  <button class="earnBtn earn" (click)="expandBar()" id="Rt2earn">Tap to Earn!</button>
 </div>
 
 <!-- all of the modals below -->
@@ -132,4 +135,6 @@
       </div>
     </div>
   </div>
+</div>
+
 
