add home page instructions

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 
 <h1>What is your time worth?</h1>
 
-<h3>The rate of {{stateCode}} is {{rate}}!</h3>
+<h3>Please select your state.</h3>
 <us-map (onMapClick)="onMapClick($event)"></us-map>
 
 <div class="container" id="startModal">
@@ -10,7 +10,7 @@
         <h3 style="margin-top: 0;">You chose {{stateCode}} at rate {{rate}}!</h3>
         <p>Instructions:</p>
         <p>
-            Tap either of the buttons on the bottom of the screen to earn money. 
+            Tap either of the buttons on the bottom of the screen, or the spacebar, to earn money. 
             Once you have earned enough to purchase an item, you'll be asked if you 
             would like to spend all your money, or keep saving for something better.
             You just have to ask yourself if it's worth the work and wait. 
