add business identification on the business screen

--- a/frontend/src/app/business-game/business-game.component.html
+++ b/frontend/src/app/business-game/business-game.component.html
@@ -58,8 +58,9 @@
     </div>
   </div>
 
-  <div style="margin-top: 20px; text-align: center;">
+  <div style="display: flex; flex-direction: row; justify-content: space-evenly; margin-top: 20px; text-align: center;">
     <button class="earnBtn earn" (click)="expandBar()" id="Lt2earn">Tap to Earn!</button>
+    <h3>Business Game (tbd)</h3>
     <button class="earnBtn earn" (click)="expandBar()" id="Rt2earn">Tap to Earn!</button>
   </div>
 
