update business component

--- a/frontend/src/app/business-game/business-game.component.html
+++ b/frontend/src/app/business-game/business-game.component.html
@@ -4,38 +4,24 @@
     <div style="flex-direction: column">
       <div class="event" id="eventseven">
         <p>You've Zuckerberg'd it!</p>
-        <!--<img *ngIf="!concertUnlocked" alt="" src="../../assets/images/concert-ticket-sil.png" id="concert-ticket" >-->
-        <!--<img *ngIf="concertUnlocked" alt="" src="../../assets/images/concert-ticket.png" id="concert-ticket" style="height: 80px;">-->
       </div>
       <div class="event" id="eventsix">
         <p>Congratulations on your IPO!</p>
-        <!--<img *ngIf="!dotUnlocked" alt="" src="../../assets/images/dot-sil.png" id="dot" style="height: 80px;">-->
-        <!--<img *ngIf="dotUnlocked" alt="" src="../../assets/images/dot.png" id="dot" style="height: 80px;">-->
       </div>
       <div class="event" id="eventfive">
         <p>You've opened a storefront!</p>
-        <!--<img *ngIf="!movieUnlocked" alt="" src="../../assets/images/movie-ticket-sil.png" id="movie-ticket" style="height: 80px;">-->
-        <!--<img *ngIf="movieUnlocked" alt="" src="../../assets/images/movie-ticket.png" id="movie-ticket" style="height: 80px;">-->
       </div>
       <div class="event" id="eventfour">
         <p>Your store has multiple locations!</p>
-        <!--<img *ngIf="!cubeUnlocked" alt="" src="../../assets/images/rubiks-cube-sil.png" id="rubiks-cube" style="height: 80px;">-->
-        <!--<img *ngIf="cubeUnlocked" alt="" src="../../assets/images/rubiks-cube.png" id="rubiks-cube" style="height: 80px;">-->
       </div>
       <div class="event" id="eventthree">
         <p>You've hired your first employees!</p>
-        <!--<img *ngIf="!happyMealUnlocked" alt="" src="../../assets/images/happy-meal-sil.png" id="happy-meal" style="height: 80px;">-->
-        <!--<img *ngIf="happyMealUnlocked" alt="" src="../../assets/images/happy-meal.png" id="happy-meal" style="height: 80px;">-->
       </div>
       <div class="event" id="eventtwo">
         <p>You've opened a home office!</p>
-        <!--<img *ngIf="!musicUnlocked" alt="" src="../../assets/images/music-download-sil.png" id="music-download" style="height: 80px;">-->
-        <!--<img *ngIf="musicUnlocked" alt="" src="../../assets/images/music-download.png" id="music-download" style="height: 80px;">-->
       </div>
       <div class="event" id="eventone">
         <p>You're a budding Entrepreneur!</p>
-        <!--<img *ngIf="!gumUnlocked" alt="" src="../../assets/images/bubble-gum-sil.png" id="gum" style="height: 80px;">-->
-        <!--<img *ngIf="gumUnlocked" alt="" src="../../assets/images/bubble-gum.png" id="gum" style="height: 80px;">-->
       </div>
     </div>
 
@@ -45,8 +31,7 @@
       </div>
     </div>
 
-    <div style="flex-direction: column;">
-      <!-- <div style="display: flex; flex-direction:column"> -->
+    <!-- <div style="flex-direction: column;">
       <p class="itemDescript" id="concert">Concert Ticket - $50.00</p>
       <p class="itemDescript" id="dot">Dot - $25.00</p>
       <p class="itemDescript" id="movie">Movie Ticket - $13.00</p>
@@ -54,8 +39,7 @@
       <p class="itemDescript" id="happyMeal">Happy Meal - $3.00</p>
       <p class="itemDescript" id="music">Music Download - $0.99</p>
       <p class="itemDescript" id="bubbleGum">Gum - $0.25</p>
-      <!-- </div> -->
-    </div>
+    </div> -->
   </div>
 
   <div style="display: flex; flex-direction: row; justify-content: space-evenly; margin-top: 20px; text-align: center;">
