--- a/frontend/src/app/business-game/business-game.component.html
+++ b/frontend/src/app/business-game/business-game.component.html
@@ -1,5 +1,5 @@
 <div id="allOfTheEverything" style="display: flex; flex-direction:column; text-align: center;">
-  <h1>Business Game (To Be Developed)</h1>
+  <h1>Business Game</h1>
 
   <div style="display: flex; flex-direction:row; position: relative; justify-content: space-evenly; height: 500px;" id="bigBox">
     <div style="flex-direction: column">
